--- a/style.css
+++ b/style.css
@@ -139,24 +139,20 @@ p {
 }
 
 .creditzone h3 {
-    font-size: 42px;
+    font-size: 52px;
     font-family: 'Impact';
     font-weight: normal;
-    margin: 0;
+    margin: -20px 0px;
     text-shadow: 0px 0px 5px black;
 }
 
 .creditzone h2:nth-child(1) {
-    margin-bottom: 36px;
-}
-
-.creditzone h3:nth-child(2) {
-    margin-bottom: 12px;
+    margin-bottom: 39px;
+    margin-top: -20px;
 }
 
 .creditzone h3:nth-child(3) {
-    font-size: 96px;
-    margin-bottom: 6px;
+    font-size: 126px;
 }
 
 .redzone {
@@ -166,6 +162,7 @@ p {
 .doubledeal {
     position: absolute;
     margin-top: 114px;
+    height: 50px;
     font-size: 54px;
     font-family: 'Impact';
     font-weight: normal;
@@ -174,14 +171,22 @@ p {
     padding: 7px 10px 1px 7px;
 }
 
+.doubledeal h5{
+    margin: 0;
+    margin-top: -16px;
+    font-size: 54px;
+    font-weight: normal;
+}
+
 .credits{
     position: absolute;
     text-align: center;
     width: 100%;
-    bottom: -5px;
+    bottom: -20px;
     z-index: 500;
+    font-size: 40px;
     text-shadow: 0px 0px 2px black;
-    
+    letter-spacing: -1px;
 }
 
 .creditsflashing{
@@ -236,54 +241,63 @@ p {
     opacity: 0;
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
   }
 
   .idlelogos-tile {
     position: relative;
-    background-image: url('img/placeholder.png'); 
+    background-image: url('img/company.png'); 
     background-size: 1280px 720px;
     animation: flip 1.5s ease forwards;
     opacity: 0;
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
   }
 
   .idlelogos-tile-reverse {
     position: relative;
-    background-image: url('img/placeholder.png'); 
+    background-image: url('img/company.png'); 
     background-size: 1280px 720px;
     animation: flipreverse 1.5s ease forwards;
     opacity: 1;
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
   }
   
 
   /* Keyframes for the flip animation */
   @keyframes flip {
     0% {
-      transform: rotateY(90deg);
+      transform: rotateY(90deg) scale(1.015);
       opacity: 0;
     }
     50% {
       opacity: 1;
     }
     100% {
-      transform: rotateY(0deg);
+      transform: rotateY(0deg) scale(1.015);
       opacity: 1;
     }
   }
   
   @keyframes flipreverse {
     0% {
-      transform: rotateY(0deg);
+      transform: rotateY(0deg) scale(1.015);
       opacity: 1;
     }
     50% {
       opacity: 1;
     }
     100% {
-      transform: rotateY(-90deg);
+      transform: rotateY(-90deg) scale(1.015);
       opacity: 0;
     }
   }
